CRUD added, Dependecy Injection added, MongoConfig added, Attribute for naming collections added

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://localhost:32772",
+    "DatabaseName": "AlfaCodingDatabase"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
