--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,11 @@
 {
+  "applicationUrl": "http://*:5000/",
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://localhost:32772",
-    "DatabaseName": "AlfaCodingDatabase"
+    "DatabaseName": "AlfaCodingDatabase",
+    "Host": "mongodb",
+    "Port":"27017",
+    "UserName":"admin",
+    "Password":"dimasito"
   },
   "Logging": {
     "LogLevel": {
