--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "applicationUrl": "http://*:5000/",
+  
   "MongoDbSettings": {
     "DatabaseName": "AlfaCodingDatabase",
-    "Host": "mongodb",
+    "Host": "localhost",
     "Port":"27017",
     "UserName":"admin",
     "Password":"dimasito"
